2001-08-03  Michael Meeks  <michael@ximian.com>

	* Version 2.3.5 for the API freeze.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* art_affine.c: (art_affine_expansion): Fix handling of
	negative numbers. We ran into this bug a while back when
	figuring out why librsvg couldn't handle certain svg files.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* art_misc.h: Change art_expand macro so it's a single
	statement, using the do while (0) trick, which gets rid
	of some warnings.
	* art_pixbuf.c: Add a missing include.
	* art_vpath_svp.c: (art_vpath_from_svp): Initialize a
	variable to avoid a compiler warning.
	* gen_art_config.c: Add a missing include.

2001-03-24  Martin Baulig  <baulig@suse.de>

	Applied the patch from Alexander Larsson which was sitting
	in gnome-libs/patches/libart.diff since February.
	[FIXME: Alex, can you please provide a ChangeLog?])

	* art_rgb_a_affine.[ch]: New files.

2001-01-07  Hans Breuer <Hans@Breuer.Org>
	* art_misc.c : embryonic change to use libart_lgpl on win32
	* libart.def : new file, exported functions for win32 dll
	* makefile.msc : handwritten for MSVC compiler

2000-09-30  Martin Baulig  <baulig@suse.de>

	* libart-2.0.pc.in: Provide pkg-config script.

	* configure.in: Create libart-2.0.pc from libart-2.0.pc.in.
	* Makefile.am (pkgconfig_DATA): Install the libart-2.0.pc
	script in `$(libdir)/pkgconfig'.

2000-08-15  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_image_solid_negotiate): Only
	sets ART_IMAGE_SOURCE_CAN_COMPOSITE when a compositing
	callback is selected. Previously was causing segfaults on
	non-alpha images. Thanks to Leonard Rosenthol for spotting
	the bug.

Fri Jun 30 22:56:58 2000  Raph Levien  <raph@acm.org>

	* art_render.c (art_render_composite): Fixed a bug that caused
	it to ignore the alpha setting. Also art_render_composite_8().

2000-06-01  John Sullivan  <sullivan@eazel.com>

	* art_svp_render_aa.c: (art_svp_render_aa_iter_step):