@@ -1,3 +1,15 @@
+2001-09-13  Havoc Pennington  <hp@redhat.com>
+
+	* Makefile.am: rename library to libart_lgpl_2
+
+	* libart-2.0.pc.in (Cflags): move includes
+
+	* libart-config.in: move includes
+
+	* Makefile.am: delete libartConf.sh, rename libart-config
+	(EXTRA_DIST): don't install m4 files
+	(libart_lgplincdir): move headers
+
 2001-08-03  Michael Meeks  <michael@ximian.com>
 
 	* Version 2.3.5 for the API freeze.
